--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			любой
 			ГВМ связываться с любой другой ГВМ. Чтобы сделать нашу коммуникационную систему универсальной, нам нужно
 			определить
-			приемлемый для всех метод идентификации компьютеров, которые присоединены к ней..
+			приемлемый для всех метод идентификации компьютеров, которые присоединены к ней.
 			Часто идентификаторы ГВМ классифицируются как имена, адреса, или маршруты. Shoch[1978] предложил, чтобы имя
 			идентифицировало, что такое объект, адреса идентифицировал, где он находится, а маршрут(путь) определял, как до
 			него
