--- a/link.html
+++ b/link.html
@@ -16,7 +16,7 @@
 			<h2>Адреса Интернета</h2>
 			<nav>
 				<ul>
-					<li><a href="index.html#Введение" target="_blank" rel="noopener">Введение</a></li>
+					<li><a href="index.html#Введение" target="_blank" rel="noopener">Введение.</a></li>
 					<li><a href="index.html#Универсальные" target="_blank" rel="noopener">Универсальные идентификаторы</a></li>
 					<li><a href="index.html#Три" target="_blank" rel="noopener">Три основных класса IP-адресов</a></li>
 					<li><a href="index.html#Адреса" target="_blank" rel="noopener">Адреса описывают сетевые соединения</a></li>
@@ -27,5 +27,4 @@
 		</section>
 	</main>
 </body>
-
 </html>
